correction alignement h1

--- a/src/scss/components/pages/listing-biens.scss
+++ b/src/scss/components/pages/listing-biens.scss
@@ -3,7 +3,7 @@
         padding: 50px 0 0;
 
         h1{
-            text-align: center;
+            text-align: left;
             font-weight: 600;
             font-size: 2.5rem;
 
