--- a/src/scss/components/pages/single-estate.scss
+++ b/src/scss/components/pages/single-estate.scss
@@ -4,7 +4,7 @@
         padding-bottom: 150px;
 
         h1{
-            text-align: left;
+            text-align: center;
             color: $dark-dark-gray;
             font-size: 3.5rem;
             line-height: 3.5rem;
